# shuttle

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  direct.txt  patch.sh  proxy.txt  push.sh  release.sh  rust-toolchain
.github/workflows/: ci-test-build.yml  release-build.yml  rust.yml
examples/: client-ws.yaml  client.yaml  gen_cert.sh  server.crt  server.csr  server.key  server.yaml  shuttlec-proxy.yaml  shuttlec-rathole.yaml  shuttlec.yaml  shuttles.yaml
examples/systemd/: client.service  server.service  shuttlec.service  shuttles.service
res/: shuttles.yaml
shuttle-core/: Cargo.toml  README.MD
shuttle-core/src/: dial.rs  ext.rs  lib.rs  peekable.rs  proxy.rs  websocket.rs
shuttle-core/src/proto/: http_connect.rs  mod.rs  trojan.rs
shuttle-station/: Cargo.toml  README.md
shuttle-station/src/: dial.rs  lib.rs  proxy.rs  tls.rs  websocket.rs
shuttle-station/src/proto/: http_connect.rs  mod.rs  padding.rs  trojan.rs
src/: admin.rs  auth.rs  byteaddr.rs  client.rs  config.rs  lib.rs  logs.rs  main.rs  proxy.rs  server.rs  setup.rs  socks.rs  store.rs  tls.rs  websocket.rs
src/common/: bytes.rs  consts.rs  mod.rs
src/rathole/: connection.rs  context.rs  dispatcher.rs  frame.rs  mod.rs  parse.rs  session.rs  shutdown.rs
src/rathole/cmd/: dial.rs  exchange.rs  hole.rs  mod.rs  ping.rs  proxy.rs  resp.rs  unknown.rs
src/server/: echo_server.rs  mod.rs  tls_server.rs
static/: index.html
tests/: command.rs  config_examples.rs  rathole.rs  socks.rs
tests/common/: mod.rs
tests/examples/: client-proxy.yaml  client-rathole.yaml  server.yaml  shuttlec-rathole.yaml  shuttlec.yaml  shuttles.yaml
