[package]
name = "shuttle"
version = "0.6.10"
edition = "2024"
publish = false

[dependencies]
borer-core = {version="0.3", features = ["websocket"]}

log = {version="0.4", features=["kv_unstable_serde"]}
tracing="0.1"
tracing-appender="0.2"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter"]}
time = {version="0.3", features=["local-offset","macros"]}
anyhow = { version = "1" }

tokio = { version = "1", features=["full"]}
tokio-rustls = "0.26"
bytes = {version="1.4.0",default-features = false, features=["std"]}

clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
atoi = "2"
itertools = "0.14"
uuid = {version="1.5.0", features=["v4"]}



[dev-dependencies]
reqwest = { version = "0.11", default-features=false, features = ["socks","rustls-tls"] }

