[package]
name = "shuttle"
version = "0.7.1"
edition = "2024"
publish = false

[dependencies]
borer-core = {version="0.4", features=["websocket", "stats", "axum"]} 

log = {version="0.4", features=["kv_unstable_serde"]}
tracing="0.1"
tracing-appender="0.2"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter"]}
rolling-file = "0.2"
time = {version="0.3", features=["local-offset","macros"]}
anyhow = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }

tokio = { version = "1", features=["full"]}
tokio-rustls = "0.26"
tokio-tungstenite = "0.26"
bytes = {version="1.4.0",default-features = false, features=["std"]}

uuid = {version="1.5.0", features=["v4"]}
sha2 = "0.10"
base16ct = { version = "0.2", features = ["alloc"] }
atoi = "2"
itertools = "0.14"

axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4.26", features = ["serde"] }
futures = "0.3.28"
rust-embed = "8.2"
mime_guess = "2.0"

[patch.crates-io]
borer-core = { path = "../borer-core" }

[dev-dependencies]
reqwest = { version = "0.11", default-features=false, features = ["socks","rustls-tls"] }

