[package]
name = "shuttle-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace=true}
anyhow = {workspace=true}
tokio = {workspace=true}
async-trait = {workspace=true}

tokio-rustls = {workspace=true}
rustls = {workspace=true}
rustls-pemfile = {workspace=true}
webpki-roots = {workspace=true}

socks5-proto = "0.4.0"
