[package]
name = "shuttle-core"
version = "0.1.0"
edition = "2021"
authors = ["Born <jing23501@gmail.com>"]
description = "shuttle"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "socks", "proxy", "async", "network", "trojan", "websocket"]
readme = "README.md"
repository = "https://github.com/cyejing/shuttle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4", features=["kv_unstable_serde"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter", "serde"]}
tracing-appender = "0.2"
time = {version="0.3", features=["local-offset","macros"]}
tokio = { version = "1", features = ["full", "tracing"] }
anyhow = { version = "1" }
thiserror ="1.0"
async-trait = "0.1"

tokio-rustls = "0.24"
rustls = { version = "0.21.0", default-features = false, features=["dangerous_configuration"] }
rustls-pemfile = "1"
webpki-roots = "0.25"

tokio-tungstenite = {version="0.20", features=["rustls-tls-webpki-roots"]}
futures= { version = "0.3"}
bytes = {version="1.4.0",default-features = false, features=["std"]}

socks5-proto = "0.4.0"
hyper = {version = "0.14.27", features=["full"] }
