[package]
name = "shuttle-station"
version = "0.6.2"
edition = "2021"
authors = ["Born <jing23501@gmail.com>"]
description = "shuttle-station"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "proxy", "network", "trojan", "shuttle"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/cyejing/shuttle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {version="0.4", features=["kv_unstable_serde"]}
tokio = { version = "1"}
anyhow = { version = "1" }
async-trait = "0.1"

tokio-rustls = "0.24"
rustls = { version = "0.21.0", default-features = false, features=["dangerous_configuration"] }
rustls-pemfile = "1"
webpki-roots = "0.25"

tokio-tungstenite = {version="0.20", features=["rustls-tls-webpki-roots"]}
futures= { version = "0.3"}
bytes = {version="1.4.0",default-features = false, features=["std"]}

socks5-proto = "0.4.0"
