[package]
name = "shuttle-station"
version = "0.6.9"
edition = "2021"
authors = ["Born <jing23501@gmail.com>"]
description = "shuttle-station"
categories = ["network-programming", "asynchronous"]
keywords = ["socks5", "proxy", "network", "trojan", "shuttle"]
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/cyejing/shuttle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = {workspace = true}
tokio = {workspace = true}
anyhow = {workspace = true}

tokio-rustls = {workspace = true}
rustls-pemfile = {workspace = true}
webpki-roots = {workspace = true}
tokio-tungstenite = {workspace = true}
futures= {workspace = true}
bytes = {workspace = true}

socks5-proto = {workspace = true}

async-trait = "0.1"
rand = "0.8.4"

